Fixes animations on mobile, adds click to expand text on slideshow, fixes slideshow glitches on mobile

--- a/general.css
+++ b/general.css
@@ -193,6 +193,12 @@ form {
     }
 }
 
+@media (max-width: 800px) {
+    #logo:hover {
+        transform: rotate(0deg);
+    }
+}
+
 @media (max-width: 768px) {
     .page-container {
         margin-left: 6px;
